# mp3tags

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean_build.sh  measure_time.hpp  tagreader.cpp  tagreader.hpp
VSBuild/: ALL_BUILD.vcxproj  handleDirectory.vcxproj  readTag.vcxproj  tagwriter.vcxproj  writeTag.vcxproj
cmake/: findComp.cmake
cmake/tests/: has_filesystem_experimental.cc
examples/: changeDir.cpp  change_dir.cpp  handleDirectory.cpp  readTag.cpp  writeTag.cpp
include/: .tagreader.hpp.swp  ape.hpp  extendTagArea.hpp  id3.hpp  id3_exceptions.hpp  id3_precheck.hpp  id3v1.hpp  id3v2_000.hpp  id3v2_230.hpp  id3v2_base.hpp  id3v2_common.hpp  id3v2_v00.hpp  id3v2_v30.hpp  id3v2_v40.hpp  logger.hpp  measure_time.hpp  metaEntry.hpp  printEntries.hpp  result.hpp  string_conversion.hpp  tagfilesystem.hpp  tagreader.hpp  tagwriter.hpp  unicode.hpp
src/: .tagreader.cpp.swp  tagreader.cpp  tagwriter.cpp
tests/: tagwriter.cpp
